--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <html>
   <head>
     <title>Screen share</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="/socket.io/socket.io.js"></script>
   </head>
-  <body style="margin: 0; padding: 0;">
-    <img
-      src="blank"
-      id="screen"
-      style="width: 100%; height: 100%" />
-  </body>
+  <body></body>
   <script>
     const socket = io();
   </script>
